force-app/main/default/objects/InvoiceItem__c/InvoiceItem__c.object-meta.xml
<CustomObject>
    <label>Item da Fatura</label>
    <nameField>
        <displayFormat>IF-{0000}</displayFormat>
        <label>Item da Fatura</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itens da Fatura</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>