force-app/main/default/objects/InvoiceItem__c/fields/Identifier__c.field-meta.xml
<CustomField>
    <fullName>Identifier__c</fullName>
    <label>Identificador</label>
    <length>50</length>
    <type>Text</type>
</CustomField>