force-app/main/default/objects/InvoiceItem__c/fields/ItemSumaryId__c.field-meta.xml
<CustomField>
    <fullName>ItemSumaryId__c</fullName>
    <label>Id do item da fatura</label>
    <length>255</length>
    <type>Text</type>
</CustomField>